syntax = "proto3";
option go_package = "FusionBridge/control/bash";

import "google/protobuf/timestamp.proto";

package jupyter;

message BashACK {
    int32 Type = 1;  // Any position number is an error
    int32 SubmissionNumber = 2;
}

message CmdSnapShot {
    int32 SubmissionNumber = 1;
    google.protobuf.Timestamp TimeStamp = 2; // A unix timestamp
    string Host = 3;
    string User = 4;
    int32 Count = 5;
    string Cmds = 16;
    string DevID = 17;
}

service Bash {
    rpc IngestCmdSnapShot(CmdSnapShot) returns (BashACK) {}
}

